made pullable again. Now with custom scrollbar (problem from previous commit still not fixed)

--- a/frontend/src/components/elements/buildingsListElement/BuildingsList.module.css
+++ b/frontend/src/components/elements/buildingsListElement/BuildingsList.module.css
@@ -38,7 +38,25 @@
         max-height: 100%;
         overflow: auto;
     }
+#scroll_style::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
 
+#scroll_style::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#scroll_style::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #E6E600;
+}
 .full_outer {
         padding: 40px 16px 16px 16px;
         background-color: white;
